--- a/shippable.yml
+++ b/shippable.yml
@@ -9,6 +9,8 @@ jobs:
     type: runSh
     steps:
       - IN: j1
+      - IN: testspog_master
+        switch: off
       - TASK:
           runtime:
             options:
@@ -17,6 +19,8 @@ jobs:
                 - IMG_VER_NAME_DASH: "v6-5-1"
           script:
             - echo "hello, world"
+            - pushd $(shipctl get_resource_state testspog_master)
             - cat foo.txt
             - shipctl replace foo.txt
             - cat foo.txt
+            - popd
