--- a/shippable.yml
+++ b/shippable.yml
@@ -9,7 +9,7 @@ resources:
   - name: nightly-trigger
     type: time
     seed:
-      interval: "0 22 * * *"
+      interval: 0 22 * * *
 
 jobs:
   - name: j1
