--- a/shippable.yml
+++ b/shippable.yml
@@ -16,4 +16,4 @@ jobs:
       - TASK:
           script:
             - echo "hello, world"
-            - test_pr is now at $(shipctl get_resource_version_name repo_test_pr)
+            - echo test_pr is now at $(shipctl get_resource_version_name repo_test_pr)
