--- a/shippable.yml
+++ b/shippable.yml
@@ -29,6 +29,9 @@ jobs:
 
   - name: A
     type: runSh
+    labels:
+      - app: foo
+      - team: dev
     steps:
       - IN: foo_params
       - TASK:
@@ -41,6 +44,9 @@ jobs:
   - name: B
     type: runSh
     dependencyMode: immediate
+    labels:
+      - app: foo
+      - team: security
     steps:
       - IN: A
       - TASK:
@@ -50,6 +56,9 @@ jobs:
   - name: C
     type: runSh
     dependencyMode: immediate
+    labels:
+      - app: foo
+      - team: accessibility
     steps:
       - IN: A
       - TASK:
@@ -59,6 +68,9 @@ jobs:
   - name: D
     type: runSh
     dependencyMode: immediate
+    labels:
+      - app: foo
+      - team: network
     steps:
       - IN: A
       - TASK:
@@ -68,6 +80,9 @@ jobs:
   - name: E
     type: runSh
     dependencyMode: strict
+    labels:
+      - app: foo
+      - team: ops
     steps:
       - IN: B
       - IN: C
